
FILE(GLOB
    ATK_IO_SRC
    *.cpp
)

FILE(GLOB
    ATK_IO_HEADERS
    *.h*
)

if(LIBSNDFILE_FOUND)
  FILE(GLOB_RECURSE
    ATK_IO_LIBSNDFILE_SRC
    libsndfile/*.cpp
  )

  FILE(GLOB_RECURSE
    ATK_IO_LIBSNDFILE_HEADERS
    libsndfile/*.h
  )

  LIST(APPEND ATK_IO_SRC ${ATK_IO_LIBSNDFILE_SRC})
  LIST(APPEND ATK_IO_HEADERS ${ATK_IO_LIBSNDFILE_HEADERS})
  LIST(APPEND ATK_IO_INCLUDE ${LIBSNDFILE_INCLUDE_DIR})
  LIST(APPEND ATK_IO_LIBRARIES ${LIBSNDFILE_LIBRARY})
endif(LIBSNDFILE_FOUND)

ATK_add_library(ATK_IO
  NAME ATKIO
  FOLDER IO
  INCLUDE ${ATK_IO_INCLUDE}
  LIBRARIES ATKCore ${ATK_IO_LIBRARIES}
  SRC ${ATK_IO_SRC}
  HEADERS ${ATK_IO_HEADERS}
)

INSTALL(FILES ${ATK_IO_LIBSNDFILE_HEADERS}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ATK/IO/libsndfile
    )
